--- a/cyphon/cyphon/templates/rest_framework_docs/docs.html
+++ b/cyphon/cyphon/templates/rest_framework_docs/docs.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block github_badge %}
-    <a href="https://github.com/dunbarcyber/cyphon/" class="github-corner" target="_blank">
+    <a href="https://github.com/dunbarcyber/cyphon/" class="github-corner">
       <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#18bc9c; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
         <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
         <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -20,7 +20,7 @@
 {% block title %}Cyphon Engine REST API Documentation{% endblock %}
 
 {% block logo %}
-  <a class="navbar-brand" href="https://cyphon.readthedocs.com/">Cyphon Engine</a>
+  <a class="navbar-brand" href="https://cyphon.readthedocs.io/">Cyphon Engine</a>
 {% endblock %}
 
 {% block jumbotron %}
@@ -33,10 +33,10 @@
 {% block footer %}
   <div class="footer">
     <div class="links">
-      <a href="http://cyphon.io"><i class="fa fa-link"></i></a>
-      <a href="http://dunbarcyber.github.io/"><i class="fa fa-github"></i></a>
-<!--       <a href="http://www.twitter.com/cyphonproject"><i class="fa fa-twitter"></i></a>
- -->    </div>
-    Copyright © 2017 Dunbar Cybersecurity.
+      <a href="https://www.cyphon.io"><i class="fa fa-link"></i></a>
+      <a href="https://dunbarcyber.github.io"><i class="fa fa-github"></i></a>
+      <a href="https://www.twitter.com/cyphonproject"><i class="fa fa-twitter"></i></a>
+    </div>
+    Copyright © 2017 <a href="http://www.dunbararmored.com/security-solutions/cybersecurity">Dunbar Security Solutions, Inc.</a>
   </div>
 {% endblock %}
