change title names to Cyphon instead of Cyclops

--- a/cyphon/cyclops/templates/cyclops/login.html
+++ b/cyphon/cyclops/templates/cyclops/login.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cyclops | Login</title>
+    <title>Cyphon | Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
   </head>
