--- a/cyphon/cyclops/templates/cyclops/app.html
+++ b/cyphon/cyclops/templates/cyclops/app.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cyclops</title>
+    <title>Cyphon</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
