--- a/cyphon/alerts/templates/alerts/comment_notification_html_email.html
+++ b/cyphon/alerts/templates/alerts/comment_notification_html_email.html
@@ -3,7 +3,7 @@
         <tr>
             <td style="padding: 25px 35px; line-height: 25px;">   
                 <img src="cid:{{ image }}">
-                <p>{{ comment.user.first_name }} {{ comment.user.last_name }} commented on <a href="{{ comment.alert.link }}" target="_blank">Alert #{{ comment.alert.id }}</a>.</p>
+                <p>{{ comment.user.first_name }} {{ comment.user.last_name }} commented on <a href="{{ comment.alert.link }}" target="_blank">Alert #{{ comment.alert.id }}</a> ({{ comment.alert.title }}).</p>
                 <blockquote style="background: #f9f9f9; border-left: 10px solid #ccc; margin: 1.5em 10px; padding: 0.5em 10px;">{{ comment.content }}</blockquote>
                 <p style="display: inline;">If the Alert link doesn't work, please copy this URL into your browser: <br>{{ comment.alert.link }}</p>
             </td>
